deploy/kustomize/production/05service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app-name
  name: app-name
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: app-name
